--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "^18",
+    "reactstrap": "^9.2.2",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "eslint": "^8",
